Created some UI components

--- a/public/index.html
+++ b/public/index.html
@@ -49,5 +49,8 @@
 
     <!-- Tailwind Script -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Fontawesome Link -->
+    <script src="https://kit.fontawesome.com/f369254daf.js" crossorigin="anonymous"></script>
   </body>
 </html>
