--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
+    <!-- <link
+      rel="stylesheet"
+      href=" https://cdn.jsdelivr.net/gh/thelevicole/youtube-to-html5-loader@4.0.1/dist/YouTubeToHtml5.js"
+    /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -52,6 +55,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Fontawesome Link -->
-    <script src="https://kit.fontawesome.com/f369254daf.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/f369254daf.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/@thelevicole/youtube-to-html5-loader@4.0.1/dist/YouTubeToHtml5.js"></script>
   </body>
 </html>
